force-app/main/default/objects/Objective__c/Objective__c.object-meta.xml
<CustomObject>
    <description>Stores objectives on an Account plan, that represents the action items associated to an Account plan. These objectives are tasks/actions that will help sales user communicate plan to leadership to meet account goals.</description>
    <label>Objective</label>
    <nameField>
        <label>Objective Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Objectives</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>