force-app/main/default/objects/Objective__c/fields/Action_Completed__c.field-meta.xml
<CustomField>
    <fullName>Action_Completed__c</fullName>
    <description>Determines % of Closed Tasks</description>
    <formula>IF( Total_Task__c == 0 ,0,(Total_Closed_Task__c / Total_Task__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Action Completed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>