force-app/main/default/objects/Objective__c/fields/IsInactive__c.field-meta.xml
<CustomField>
    <fullName>IsInactive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>field to mark objective as inactive when user wants to delete it.</description>
    <label>IsInactive</label>
    <type>Checkbox</type>
</CustomField>