force-app/main/default/objects/Objective__c/fields/Objective_Status__c.field-meta.xml
<CustomField>
    <fullName>Objective_Status__c</fullName>
    <description>Status of Objective(Default : In Progress)</description>
    <defaultValue>&apos;In Progress&apos;</defaultValue>
    <label>Objective Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Objective_Status</valueSetName>
    </valueSet>
</CustomField>