force-app/main/default/objects/Objective__c/fields/Plan_Objective__c.field-meta.xml
<CustomField>
    <fullName>Plan_Objective__c</fullName>
    <description>Lookup field to Plan Objective</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plan Objective</label>
    <referenceTo>Plan_Objective__c</referenceTo>
    <relationshipLabel>Objectives</relationshipLabel>
    <relationshipName>Objectives</relationshipName>
    <type>Lookup</type>
</CustomField>