force-app/main/default/objects/Objective__c/validationRules/CheckObjectiveStatus.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckObjectiveStatus</fullName>
    <active>true</active>
    <description>Restrict user to save record if Object status is Closed and Closed Status is empty.</description>
    <errorConditionFormula>AND(TEXT(Objective_Status__c ) = &apos;Closed&apos;,TEXT( Closed_Status__c )=&apos;&apos;)</errorConditionFormula>
    <errorMessage>Please Select Closed Status.</errorMessage>
</ValidationRule>